virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - go-api-gateway
  http:
  - match:
    - headers:
        service-router:
          exact: "${VERSION}"
    route:
    - destination:
        host: myapp.default.svc.cluster.local
        version: 1
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: myapp.default.svc.cluster.local
        port:
          number: 8080
